--- a/view/B/SG/memberProfile.html
+++ b/view/B/SG/memberProfile.html
@@ -47,6 +47,7 @@
             document.getElementById("income").value = member.income;
 
             //Get Bought Items
+            //================Edited code for sales history============
             fetch(new Request('/api/getBoughtItem/' + member.id,
                 {
                     method: 'GET',
@@ -63,55 +64,41 @@
                         var htmlTxt = '';
                         var orderIdList = [];
                         var overallPrice = 0;
-                        var finalPrice = 0;
+
                         //get all order IDs
                         for (i = 0; i < boughtItem.length; i++) {
                             orderIdList[i] = boughtItem[i].id;
                         }
                         //unduplicate order IDs
                         orderIdList = [...new Set(orderIdList)];
-                        var temp;
-                        var size = orderIdList.length;
-                        //sort order ID in ascending order
-                        for (i = 0; i < size - 1; i++) {
-                            for (j = 0; j < size - i - 1; j++) {
-                                if (orderIdList[j] > orderIdList[j + 1]) {
-                                    temp = orderIdList[j];
-                                    orderIdList[j] = orderIdList[j + 1];
-                                    orderIdList[j + 1] = temp;
-                                }
-                            }
-                        }
 
-                        htmlTxt += '<h5>Order #' + (1) + '</h5>';
-                        var counter = 0;
-                        //get bought items by order ID
-                        for (j = 0; j < boughtItem.length; j++) {
+                        //sort order ID in ascending order (oldest first)
+                        orderIdList.sort((a, b) => a - b);
 
-                            if (boughtItem[j].id == orderIdList[0]) {
-                                var item = boughtItem[j];
-                                //display top level info
-                                if (counter == 0) {
-                                    let options = {
-                                        weekday: "long", year: "numeric", month: "long",
-                                        day: "numeric", hour: "2-digit", minute: "2-digit"
-                                    };
-                                    var datePurchased = (new Date(item.createddate)).toLocaleTimeString('en-us', options);
-                                    var deliveryDate = addWorkDays(new Date(item.createddate), 5);
-                                    htmlTxt += '\
-                                            <h6>Date Purchased: ' + datePurchased + '</h6>\
-                                            <h6>Estimated Delivery Date: ' + deliveryDate + '</h6>\
-                                            <h6 style="text-decoration:underline; font-weight:bold">Delivery Details:</h6>\
-                                            <h6>Address: ' + item.address + '</h6>\
-                                            <h6>Postal Code: ' + item.postalCode + '</h6>\
-                                            <h6>Name: ' + item.customerName + '</h6>\
-                                            <h6>Contact Number: ' + item.phone + '</h6>';
-                                    counter++;
-                                }
-                            }
-                        }
-                        //display table info
-                        htmlTxt += '\
+                        for (var x = 0; x < orderIdList.length; x++) {
+                            var currentOrderId = orderIdList[x];
+                            var orderItems = boughtItem.filter(item => item.id === currentOrderId);
+                            var firstItem = orderItems[0];
+                            var orderTotal = 0;
+
+                            htmlTxt += '<h5>Order #' + (x + 1) + '</h5>';
+
+                            let optionsPurchased = {
+                                weekday: "long", year: "numeric", month: "long",
+                                day: "numeric", hour: "2-digit", minute: "2-digit"
+                            };
+                            var datePurchased = (new Date(firstItem.createddate)).toLocaleTimeString('en-us', optionsPurchased);
+                            var deliveryDate = addWorkDays(new Date(firstItem.createddate), 5);
+
+                            htmlTxt += '<h6>Date Purchased: ' + datePurchased + '</h6>';
+                            htmlTxt += '<h6>Estimated Delivery Date: ' + deliveryDate + '</h6>';
+                            htmlTxt += '<h6 style="text-decoration:underline; font-weight:bold">Delivery Details:</h6>';
+                            htmlTxt += '<h6>Address: ' + firstItem.address + '</h6>';
+                            htmlTxt += '<h6>Postal Code: ' + firstItem.postalCode + '</h6>';
+                            htmlTxt += '<h6>Name: ' + firstItem.customerName + '</h6>';
+                            htmlTxt += '<h6>Contact Number: ' + firstItem.phone + '</h6>';
+
+                            htmlTxt += '\
                                 <div class="row">\
                                     <div class="col-md-12">\
                                         <div class="row featured-boxes">\
@@ -121,48 +108,50 @@
                                                         <table cellspacing="0" class="shop_table cart">\
                                                             <thead>\
                                                                 <tr>\
-                                                                    <th class="product-thumbnail" style="width: 25%">Image</th>\
-                                                                    <th class="product-name" style="width: 38%">Product</th>\
+                                                                    <th class="product-thumbnail" style="width: 20%">Image</th>\
+                                                                    <th class="product-name" style="width: 40%">Product</th>\
                                                                     <th class="product-price" style="width: 15%">Price</th>\
-                                                                    <th class="product-quantity" style="width: 15%">Quantity</th>\
+                                                                    <th class="product-quantity" style="width: 10%">Quantity</th>\
                                                                     <th class="product-subtotal" style="width: 15%">Subtotal</th>\
                                                                 </tr>\
                                                             </thead>\
                                                             <tbody>';
-                        for (y = 0; y < boughtItem.length; y++) {
 
-                            if (boughtItem[y].id == orderIdList[0]) {
-                                var product = boughtItem[y];
+                            for (var y = 0; y < orderItems.length; y++) {
+                                var product = orderItems[y];
+                                var subtotal = product.retailPrice * product.quantity;
+                                orderTotal += subtotal;
+
                                 htmlTxt += '\
-                                        <tr class="cart_table_item">\
-                                            <td class="product-thumbnail">\
-                                                <a href="/B/' + countryPrefix + '/furnitureProductDetails.html?sku=' + product.sku + '"><img width="100" height="100" alt="" class="img-responsive" src="' + product.imageUrl + '"></a>\
-                                            </td>\
-                                            <td class="product-name">\
-                                                <a class="productDetails" href="/B/' + countryPrefix + '/furnitureProductDetails.html?sku=' + product.sku + '">' + product.itemName + '</a>\
-                                            </td>\
-                                            <td class="product-price">\
-                                                $<span class="amount">' + product.retailPrice.toFixed(2) + '</span>\
-                                            </td>\
-                                            <td class="product-quantity">\
-                                                <span class="qty">' + product.quantity + '</span>\
-                                            </td>\
-                                            <td class="product-subtotal">\
-                                                $<span class="amount">' + product.retailPrice.toFixed(2) * product.quantity + '</span>\
-                                            </td>\
-                                        </tr>';
-                                finalPrice += product.retailPrice.toFixed(2) * product.quantity;
-                                overallPrice += product.retailPrice.toFixed(2) * product.quantity;
+                                    <tr class="cart_table_item">\
+                                        <td class="product-thumbnail">\
+                                            <a href="/B/' + countryPrefix + '/furnitureProductDetails.html?sku=' + product.sku + '"><img width="100" height="100" alt="" class="img-responsive" src="' + product.imageUrl + '"></a>\
+                                        </td>\
+                                        <td class="product-name">\
+                                            <a class="productDetails" href="/B/' + countryPrefix + '/furnitureProductDetails.html?sku=' + product.sku + '">' + product.itemName + '</a>\
+                                        </td>\
+                                        <td class="product-price">\
+                                            $<span class="amount">' + product.retailPrice.toFixed(2) + '</span>\
+                                        </td>\
+                                        <td class="product-quantity">\
+                                            <span class="qty">' + product.quantity + '</span>\
+                                        </td>\
+                                        <td class="product-subtotal">\
+                                            $<span class="amount">' + subtotal.toFixed(0) + '</span>\
+                                        </td>\
+                                    </tr>';
                             }
-                        }
-                        htmlTxt += '\
+
+                            overallPrice += orderTotal;
+
+                            htmlTxt += '\
                                                                 <tr>\
                                                                     <td></td>\
                                                                     <td></td>\
                                                                     <td></td>\
                                                                     <td class="product-subtotal" style="font-weight: bold; color: #cc3b33">Total:</td>\
                                                                     <td class="product-subtotal" style="font-weight: bold">\
-                                                                        $<span class="amount" id="finalPrice" name="finalPrice">' + finalPrice + '</span>\
+                                                                        $<span class="amount"> ' + orderTotal.toFixed(0) + '</span>\
                                                                     </td>\
                                                                 </tr>\
                                                             </tbody>\
@@ -172,15 +161,16 @@
                                             </div>\
                                         </div>\
                                     </div>\
-                                </div>';
-                        finalPrice = 0;
+                                </div><hr class="more-spaced">';
+                        }
 
-                        htmlTxt += '<h4 style="font-weight: bold; padding-left: 20px">Total Amount Spent: $' + overallPrice + '</h4>';
+                        htmlTxt += '<h4 style="font-weight: bold; padding-left: 20px">Total Amount Spent: $' + overallPrice.toFixed(0) + '</h4>';
                         document.getElementById("salesHistoryTab").innerHTML = htmlTxt;
                     }
                 }).catch(function (error) {
                     console.log(error);
                 });
+            //=======================
         }, false);
 
         function addWorkDays(startDate, days) {
